2006-11-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* cortado.spec:
	  delete
	* cortado.spec.in:
	  template for cortado.spec
	* scripts/update-spec-file:
	  add a script to generate cortado.spec from template, filling
	  in Version and Release information
	  Use Release tag to keep track of svn revision, branch and status
	  if the nano is set
	* build.xml:
	  add a spec target

2006-11-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* scripts/update-source-info:
	  add a script to generate src/com/fluendo/jst/SourceInfo.java
	  This file describes the repository version of the source code.
	* build.xml:
	  use the new script to generate SourceInfo.java
	* src/com/fluendo/player/Cortado.java:
	(Cortado.AboutFrame.AboutFrame):
	  Get the source info and display it
	This makes sure that a cortado built from a dist still has this
	revision information

2006-11-03  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/plugin/HTTPSrc.java: (HTTPSrc.Pad),
	(HTTPSrc.openWithConnection), (HTTPSrc.openWithSocket):
	Set default contentLength to -1 and take care we don't use invalid
	contentLength.

2006-11-02  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/player/Status.java: (Status.setBufferPercent):
	Use correct variable...

2006-11-02  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/player/Status.java: (Status.paint),
	(Status.intersectSeekbar), (Status.mouseMoved):
	Don't allow the user to press play/pause when we are buffering.

2006-11-02  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/player/Status.java: (Status.paint):
	Don't paint the time if the applet is buffering.

2006-11-02  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/player/Status.java: (Status.paint):
	Rearange status area, always show start/stop even if the file is not
	seekable.

2006-11-02  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/player/Cortado.java: (Cortado..stop):
	Ignore potential errors in shutdown.

2006-11-02  Wim Taymans  <wim@fluendo.com>
